--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.2.1",
     "@material-ui/lab": "^4.0.0-alpha.18",
     "@straw-hat/react-fullscreen": "^1.2.1",
+    "lodash": "^4.17.14",
     "mapbox-gl": "^1.1.0",
     "material-table": "^1.40.1",
     "material-ui": "^0.20.2",
