--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.1.3",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/lab": "^4.0.0-alpha.18",
+    "@react-bootstrap/pagination": "^1.0.0",
     "@straw-hat/react-fullscreen": "^1.2.1",
     "lodash": "^4.17.14",
     "mapbox-gl": "^1.1.0",
@@ -13,8 +14,12 @@
     "material-ui": "^0.20.2",
     "mui-datatables": "^2.6.2",
     "react": "^16.8.6",
+    "react-bootstrap-pagination": "^1.0.7",
     "react-dom": "^16.8.6",
+    "react-js-pagination": "^3.0.2",
     "react-mapbox-gl": "^4.4.0",
+    "react-next-paging": "^7.0.7",
+    "react-paginate": "^6.3.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "use-react-router": "^1.0.7"
